2010-07-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/BlameWidget.cs:
	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs:
	  Improved the visualization of the change-diff - it's now
	  easier to see what has changed when only a part of the line
	  changed.

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/ComparisonView.cs:
	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs:
	  Undo/Redo now works in comparison view.

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/BlameWidget.cs: Added
	  bounds check.

2010-07-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/BlameWidget.cs: set correct
	  bounds.

2010-07-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/BlameWidget.cs: Added range
	  check.

2010-07-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/BlameView.cs:
	* MonoDevelop.VersionControl.Views/ComparisonView.cs:
	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs: Worked
	  on version control views.

2010-06-30  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.VersionControl.csproj:
	* MonoDevelop.VersionControl.Views/LogView.cs:
	* MonoDevelop.VersionControl.Views/PatchView.cs:
	* MonoDevelop.VersionControl.Views/BlameView.cs:
	* MonoDevelop.VersionControl.Views/PatchWidget.cs:
	* MonoDevelop.VersionControl.Views/BlameWidget.cs:
	* MonoDevelop.VersionControl.Views/ComparisonView.cs:
	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs:
	* gtk-gui/MonoDevelop.VersionControl.Views.PatchWidget.cs:
	* MonoDevelop.VersionControl.Views/ComparisonWidgetContainer.cs:
	* gtk-gui/MonoDevelop.VersionControl.Views.ComparisonWidgetContainer.cs:
	  Worked on version control gui.

2010-06-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/BlameWidget.cs: Worked on
	  blame widget.
